--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Portfolio</title>
 </head>
 <body>
     <nav>
-        <div id="navbar-icon">
+        <a href="#"><div id="navbar-icon">
             <img src="./assets/redhat.svg" alt="#">
             <h1>Luka Hat</h1>
         </div>
+        </a>
         <ul id="navbar-links">
             <a href="#"><li>O meni</li></a>
             <a href="#"><li>Projekti</li></a>
