--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           > te se bavim poljem Frontend web developmenta. 
         </article>
         <img
-          src="./assets/casual-life-3d-man-working-on-laptop-and-drinking-coffee.png"
+          src="./assets/image1.png"
           alt=""
         />
       </section>
@@ -44,15 +44,60 @@
         <h2>Projekti</h2>
         <article>
           <div class="projekt">
-            <img src="#" alt="" />
-            <span class="tehnologije"></span>
+            <img src="./assets/projekt1.png" alt="projekt1" class="projekt-feature"/>
+            <span class="tehnologije">
+              <img src="./assets/tech/dotnet-svgrepo-com.svg" alt="">
+              <img src="./assets/tech/react-svgrepo-com.svg" alt="">
+              <img src="./assets/tech/sass-svgrepo-com.svg" alt="">
+              <img src="./assets/tech/gulp-svgrepo-com.svg" alt="">
+            </span>
             <h3>Opis projekta</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Blanditiis, id et quasi odio deserunt dolore explicabo quia
-              impedit ipsam. Earum.
+              Web aplikacija koja omogućuje CRUD aplikacije nad podatcima o studentima i razmjenama.
             </p>
+            <div class="github-link">
+              <a href="https://github.com/LukaHat/MRSApi" target="_blank">
+                <img src="/assets/tech/github-142-svgrepo-com.svg" alt="">
+              </a>
+            </div>
           </div>
+
+          <div class="projekt">
+            <img src="./assets/projekt2.png" alt="projekt2" class="projekt-feature"/>
+            <span class="tehnologije">
+              <img src="./assets/tech/jquery-svgrepo-com.svg" alt="">
+              <img src="./assets/tech/html-fill-svgrepo-com.svg" alt="">
+              <img src="./assets/tech/sass-svgrepo-com.svg" alt="">
+            </span>
+            <h3>Opis projekta</h3>
+            <p>
+              Web stranica za pregled vijesti sa interaktivnim sliderima.
+            </p>
+            <div class="github-link">
+              <a href="https://github.com/LukaHat/Kenaz" target="_blank">
+                <img src="/assets/tech/github-142-svgrepo-com.svg" alt="">
+              </a>
+            </div>
+          </div>
+
+          <div class="projekt">
+            <img src="./assets/projekt3.png" alt="projekt3" class="projekt-feature"/>
+            <span class="tehnologije">
+              <img src="./assets/tech/jquery-svgrepo-com.svg" alt="">
+              <img src="./assets/tech/html-fill-svgrepo-com.svg" alt="">
+              <img src="./assets/tech/sass-svgrepo-com.svg" alt="">
+            </span>
+            <h3>Opis projekta</h3>
+            <p>
+              Podloga za kreiranje interaktivnog slidera na web stranici.
+            </p>
+            <div class="github-link">
+              <a href="https://github.com/LukaHat/Slider" target="_blank">
+                <img src="/assets/tech/github-142-svgrepo-com.svg" alt="">
+              </a>
+            </div>
+          </div>
+          
         </article>
       </section>
       <section id="kontakt">
